# gigabot

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ANALYSIS-v0.5.md  CHANGELOG.md  DEPLOY-v0.5.md  GIT-SETUP.md  PLAN-v0.3.md  PLAN-v0.4.md  PLAN-v0.5.md  PRESENTATION-KLUB-STROITELEY.md  RAG-ISSUE-ASSESSMENT.md  SERVER-INSTALL.md  TEST-RESULTS-AND-FIXES.md  TOKEN-USAGE.md  WORK-PLAN-v0.5-done.md
gigabot/: __init__.py  __main__.py
gigabot/agent/: context.py  loop.py  memory.py  skills.py  subagent.py
gigabot/agent/tools/: base.py  cron.py  filesystem.py  kandinsky.py  message.py  ocr.py  rag.py  registry.py  salute_speech.py  shell.py  spawn.py  tasks.py  web.py
gigabot/bus/: queue.py
gigabot/channels/: base.py  manager.py  telegram.py
gigabot/cli/: commands.py
gigabot/config/: loader.py  schema.py
gigabot/cron/: service.py
gigabot/heartbeat/: service.py
gigabot/providers/: base.py  gigachat_provider.py
gigabot/session/: manager.py
gigabot/skills/: README.md
gigabot/utils/: helpers.py
